sfSandBoxCode/force-app/main/default/objects/Currency_Config__c/Currency_Config__c.object-meta.xml
<CustomObject>
    <label>Currency Config</label>
    <nameField>
        <label>Currency Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>