sfSandBoxCode/force-app/main/default/objects/Currency_Config__c/fields/Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name__c</fullName>
    <label>Curreny Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>British Pound</fullName>
            </value>
            <value>
                <fullName>Kenyan Shilling</fullName>
            </value>
            <value>
                <fullName>U.S. Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>